--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tic Tac Toe - DANZCOXZZZ</title>
+  <title>Tic Tac Toe</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -101,7 +101,7 @@
   </style>
 </head>
 <body>
-  <h1>Tic Tac Toe - <span style="color:#f0f">DANZCOXZZZ</span></h1>
+  <h1>Tic Tac Toe<span style="color:#f0f"></span></h1>
   <div class="controls">
     <button onclick="startGame('2p')">2 Player</button>
     <button onclick="startGame('easy')">Bot Easy</button>
